// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Checkbox Desktop 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <fieldset
    class="fd-fieldset"
  >
    
    
    <legend
      class="fd-fieldset__legend"
    >
      Desktop (compact) checkboxes
    </legend>
    
    
    <div
      class="fd-form-group"
    >
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez611c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez611c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Apple
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez612c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez612c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Banana
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez622c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez622c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Kiwi
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez632c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez632c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Lemon
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez613c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez613c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              All Fruits (TriState)
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez643c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez643c"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              All Fruits (TriState)
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
    
    </div>
    

  </fieldset>
  

</section>
`;

exports[`Storyshots Components/Forms/Checkbox Inline 1`] = `
<fieldset
  class="fd-fieldset"
>
  
    
  <legend
    class="fd-fieldset__legend"
  >
    Inline checkboxes
  </legend>
  
    
  <div
    class="fd-form-group fd-form-group--inline"
  >
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        class="fd-checkbox"
        id="Ai4ez617"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez617"
      >
        
                
        <div
          class="fd-checkbox__label-container"
        >
          
                    
          <span
            class="fd-checkbox__text"
          >
            Potatoes
          </span>
          
                
        </div>
        
            
      </label>
      
        
    </div>
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        checked=""
        class="fd-checkbox"
        id="Ai4ez618"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez618"
      >
        
                
        <div
          class="fd-checkbox__label-container"
        >
          
                    
          <span
            class="fd-checkbox__text"
          >
            Tomatoes
          </span>
          
                
        </div>
        
            
      </label>
      
        
    </div>
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        checked=""
        class="fd-checkbox"
        disabled=""
        id="Ai4ez619"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez619"
      >
        
                
        <div
          class="fd-checkbox__label-container"
        >
          
                    
          <span
            class="fd-checkbox__text"
          >
            Carrots
          </span>
          
                
        </div>
        
            
      </label>
      
        
    </div>
    
    
  </div>
  

</fieldset>
`;

exports[`Storyshots Components/Forms/Checkbox Mobile 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <fieldset
    class="fd-fieldset"
  >
    
    
    <legend
      class="fd-fieldset__legend"
    >
      Mobile checkboxes
    </legend>
    
    
    <div
      class="fd-form-group"
    >
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          id="Ai4ez611"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez611"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Apple
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox"
          id="Ai4ez612"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez612"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Banana
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          disabled=""
          id="Ai4ez622"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez622"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Kiwi
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox"
          disabled=""
          id="Ai4ez632"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez632"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Lemon
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          id="Ai4ez613"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez613"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              All Fruits (TriState)
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          disabled=""
          id="Ai4ez643"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez643"
        >
          
                
          <div
            class="fd-checkbox__label-container"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              All Fruits (TriState)
            </span>
            
                
          </div>
          
            
        </label>
        
        
      </div>
      
    
    </div>
    

  </fieldset>
  

</section>
`;

exports[`Storyshots Components/Forms/Checkbox Required 1`] = `


`;

exports[`Storyshots Components/Forms/Checkbox States 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <div
    class="checkbox-example-container"
  >
    
    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Error checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-error"
            id="Ai4ez6119"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez6119"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-error"
            id="Ai4ez6129"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez6129"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-error"
            id="Ai4ez613i1"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i1"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Success checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-success"
            id="Ai4ez61192"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61192"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-success"
            id="Ai4ez61292"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61292"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-success"
            id="Ai4ez613i2"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i2"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Warning checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-warning"
            id="Ai4ez61193"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61193"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-warning"
            id="Ai4ez61293"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61293"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-warning"
            id="Ai4ez613i3"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i3"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Information checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-information"
            id="Ai4ez61194"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61194"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-information"
            id="Ai4ez61294"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61294"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-information"
            id="Ai4ez613i4"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i4"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Disabled checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            disabled=""
            id="Ai4ez61196"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61196"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox"
            disabled=""
            id="Ai4ez61296"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61296"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            disabled=""
            id="Ai4ez613i6"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i6"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Readonly checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            id="Ai4ez611967"
            readonly=""
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez611967"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Text Option
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox"
            id="Ai4ez61296cc"
            readonly=""
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61296cc"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                Selected State
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            id="Ai4ez613i6cc"
            readonly=""
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i6cc"
          >
            
                    
            <div
              class="fd-checkbox__label-container"
            >
              
                        
              <span
                class="fd-checkbox__text"
              >
                TriState Text
              </span>
              
                    
            </div>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

  </div>
  

</section>
`;
